<resources>
    <string name="app_name">ToDoList</string>
    <string name="buttonAdd">Add task</string>
    <string name="taskName">Task Name</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="radioHigh">High</string>
    <string name="radioMedium">Medium</string>
    <string name="radioLow">Low</string>
    <string name="deadline">Deadline</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonReset">Reset</string>
</resources>
